<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_service</name>
  <version>1.0.0</version>
  <description>ROS 2 package for I2C communication </description>
  <maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>i2c_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
